# example-rust-snap

./: LICENSE.md  README.md  package-lock.json  package.json  patch.js  tsconfig.json
src/deno/mods/: mod.ts
src/node/: index.test.ts
src/node/mods/: index.ts
wasm/: Cargo.toml
wasm/pkg/: example.d.ts  example.js  example.wasm.js  example_bg.wasm  example_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
