[package]
name = "example"
version = "1.0.0"
authors = ["hazae41 <hazae41@proton.me>"]
edition = "2021"

description = "An example Snap written in Rust"
repository = "https://github.com/example/example"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
wasm-bindgen = { version = "0.2.89", default-features = false, features= ["std"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }